<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>mx.randalf.protocol</groupId>
  <artifactId>RandalfProtocol</artifactId>
  <version>1.0.2</version>
  <packaging>pom</packaging>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <modules>
    <module>RandalfHibernate</module>
    <module>RandalfQuartzCore</module>
    <module>RandalfSolrCore</module>
    <module>RandalfCatSan</module>
    <!-- module>RandalfHibernateSpring</module -->
    <module>RandalfAmazonS3</module>
    <!-- module>RandalfWsdl</module -->
    <module>RandalfGoogleXls</module>
    <module>RandalfSbnClient</module>
  </modules>
    <distributionManagement>
    <repository>
        <id>mvn-bncf</id>
        <name>Maven BNCF-releases</name>
        <url>http://maven.bncf.firenze.sbn.it/artifactory/libs-release-local</url>
    </repository>
</distributionManagement>

</project>
